Fix asset paths after folder restructure

--- a/src/index.html
+++ b/src/index.html
@@ -63,7 +63,7 @@
 
     header.hero { position: relative; overflow: hidden; padding: 170px 0 150px; background: radial-gradient(circle at 18% 22%, rgba(56,192,255,0.18), transparent 32%), radial-gradient(circle at 82% 12%, rgba(158,241,255,0.15), transparent 30%), #0c121c; }
     header.hero::before { content: ''; position: absolute; inset: 0; background: linear-gradient(180deg, rgba(6,10,18,0.16) 0%, rgba(6,10,18,0.38) 32%, rgba(6,10,18,0.58) 60%, rgba(8,12,20,0.86) 100%); z-index: 1; }
-    header.hero::after { content: ''; position: absolute; inset: 0; background-image: linear-gradient(180deg, rgba(6,10,18,0.05), rgba(6,10,18,0.38)), url('./66f4f3f0f5a20e001d2aac71.jpg'); background-size: cover; background-position: center -60px; mix-blend-mode: screen; opacity: 0.82; z-index: 0; transform: translateY(-30px) scale(1.02); filter: saturate(1.12) contrast(1.04); }
+    header.hero::after { content: ''; position: absolute; inset: 0; background-image: linear-gradient(180deg, rgba(6,10,18,0.05), rgba(6,10,18,0.38)), url('../Assets/66f4f3f0f5a20e001d2aac71.jpg'); background-size: cover; background-position: center -60px; mix-blend-mode: screen; opacity: 0.82; z-index: 0; transform: translateY(-30px) scale(1.02); filter: saturate(1.12) contrast(1.04); }
     .hero-grid { position: relative; z-index: 2; display: grid; gap: 18px; max-width: 840px; }
     .badge { display: inline-flex; align-items: center; gap: 8px; padding: 8px 14px; border-radius: 999px; background: rgba(56,192,255,0.16); color: var(--accent-2); font-weight: 700; letter-spacing: 0.4px; }
     .hero h1 { font-size: clamp(34px, 4vw, 56px); }
@@ -132,7 +132,7 @@
     <nav class="nav" id="nav">
       <div class="shell nav-inner">
         <div class="brand">
-          <img src="./summit-logo.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
+          <img src="../Assets/SUMMIT Logo - Light.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
         </div>
         <div class="nav-menu" aria-label="Primary">
           <button class="menu-toggle" type="button" aria-expanded="false" aria-controls="menu-list">
@@ -248,11 +248,11 @@
           <h2>Recent Installs + Lighting Looks</h2>
           <div class="gallery" style="margin-top:14px;">
             <figure>
-              <img src="./66f4f3f0f5a20e001d2aac71.jpg" alt="Warm white roofline lighting" loading="lazy" />
+              <img src="../Assets/66f4f3f0f5a20e001d2aac71.jpg" alt="Warm white roofline lighting" loading="lazy" />
               <figcaption>Warm white accent</figcaption>
             </figure>
             <figure>
-              <img src="./oneHouseThreeWays.webp" alt="Color scenes on roofline" loading="lazy" />
+              <img src="../Assets/oneHouseThreeWays.webp" alt="Color scenes on roofline" loading="lazy" />
               <figcaption>Holiday + color scenes</figcaption>
             </figure>
             <figure class="placeholder"></figure>
@@ -386,7 +386,7 @@
     <footer>
       <div class="shell footer-grid">
         <div class="footer-brand">
-          <img src="./summit-logo.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
+          <img src="../Assets/SUMMIT Logo - Light.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
           <div>
             <strong>SUMMIT Lighting Systems</strong><br/>
             <small>Permanent Holiday + Year‑Round Accent Lighting</small>
