--- a/src/index.html
+++ b/src/index.html
@@ -153,7 +153,7 @@
           </div>
         </div>
         <div class="nav-actions">
-          <a class="btn secondary" href="tel:+12501234567">Call (250) 123-4567</a>
+          <a class="btn secondary" href="tel:+12501234567">Call / Text</a>
           <a class="btn primary" href="#quote">Get a Free Quote</a>
         </div>
       </div>
@@ -163,7 +163,7 @@
       <div class="shell hero-grid">
         <div class="microbar"><span>West Kootenays</span><span class="bullet"></span><span>Permanent roofline lighting</span><span class="bullet"></span><span>Free on-site estimate</span></div>
         <h1>Permanent Roofline Lighting — Installed Once, Enjoyed Year‑Round</h1>
-        <p class="lede">A clean, low-profile lighting system professionally installed on your home or business. Set schedules, change colors, and run scenes anytime — holidays, evenings, events, and everyday accent lighting.</p>
+        <p class="lede">A clean, low-profile lighting system installed on your home or business. Set schedules, change colors, and run scenes anytime for holidays, events, and everyday curb appeal.</p>
         <div class="cta-row">
           <a class="btn primary" href="#quote">Get a Free Quote</a>
           <a class="btn secondary" href="tel:+12501234567">Call / Text for a Fast Estimate</a>
@@ -332,14 +332,14 @@
           <div class="eyebrow">FAQ</div>
           <h2>Answers Up Front</h2>
           <div class="faq" style="margin-top:12px;">
-            <details open><summary>Does it look noticeable during the day?</summary><p>Chromaglow Pro is designed to be discrete on the roofline, with tracks/channels intended to keep the install looking clean and built-in. We color-match and place the system to minimize visibility.</p></details>
+            <details open><summary>Does it look noticeable during the day?</summary><p>Chromaglow Pro is designed to be discreet on the roofline with clean, built-in tracks. We color-match and place it to minimize visibility from the street where possible.</p></details>
             <details><summary>Can you do warm white only?</summary><p>Yes. Chromaglow Pro is RGBW, including a dedicated white channel. We can set warm-white-only daily schedules, with full color available anytime.</p></details>
-            <details><summary>How do controls and scheduling work?</summary><p>Control through the Chromaglow Pro app: presets, scenes, brightness, scheduled automation. Smart-home friendly with Alexa and Google Home.</p></details>
+            <details><summary>How do controls and scheduling work?</summary><p>Control through the Chromaglow Pro app: presets, scenes, brightness, and scheduled automation. Compatible with Alexa and Google Home.</p></details>
             <details><summary>How long does installation take?</summary><p>Many homes are completed in a day; larger or complex roofs can take longer. We confirm timelines after measuring.</p></details>
-            <details><summary>What happens if a section fails?</summary><p>Sections can be cut and spliced for straightforward repairs. We isolate and replace using the manufacturer’s components.</p></details>
+            <details><summary>What happens if a section fails?</summary><p>Sections can be cut and spliced for straightforward repairs. We diagnose, isolate the segment, and repair/replace using manufacturer components.</p></details>
             <details><summary>Is it safe / low voltage?</summary><p>Yes. It’s a 48V low-voltage system; local permit requirements vary by municipality.</p></details>
-            <details><summary>Can I expand coverage later?</summary><p>Usually yes. Controllers can manage long runs; we can add supplies/controllers as needed.</p></details>
-            <details><summary>How do you handle steep roofs and hard access?</summary><p>Certified in fall protection and MEWP operation; we plan installs with the right access method for your roofline.</p></details>
+            <details><summary>Can I expand coverage later?</summary><p>Usually, yes. The system is designed to scale, and we can expand later with additional power supplies/controllers as needed.</p></details>
+            <details><summary>How do you handle steep roofs and hard access?</summary><p>We plan around safe access. Our crew is certified in fall protection and MEWP operation, and we choose the right approach for the site.</p></details>
             <details><summary>What’s included in the quote?</summary><p>Measured lighting plan, full cost estimate, timeline estimate, and warranty clarity for manufacturer parts + SUMMIT workmanship.</p></details>
           </div>
         </div>
@@ -407,7 +407,7 @@
 
     <div class="sticky-cta">
       <a class="btn secondary" href="tel:+12501234567">Call / Text</a>
-      <a class="btn primary" href="#quote">Get Free Quote</a>
+      <a class="btn primary" href="#quote">Get a Free Quote</a>
     </div>
   </div>
 
