Simplify landing page sections per V2 copy

--- a/src/index.html
+++ b/src/index.html
@@ -140,14 +140,9 @@
             Menu
           </button>
           <div class="menu-list" id="menu-list">
-            <a href="#problem">Pain</a>
-            <a href="#benefits">Benefits</a>
-            <a href="#system">System</a>
-            <a href="#gallery">Gallery</a>
+            <a href="#switch">Why Switch</a>
+            <a href="#benefits">What You Get</a>
             <a href="#process">Process</a>
-            <a href="#proof">Proof</a>
-            <a href="#pricing">Pricing</a>
-            <a href="#warranty">Warranties</a>
             <a href="#faq">FAQ</a>
             <a href="#quote">Quote</a>
           </div>
@@ -161,40 +156,42 @@
 
     <header class="hero" id="top">
       <div class="shell hero-grid">
-        <div class="microbar"><span>West Kootenays</span><span class="bullet"></span><span>Permanent roofline lighting</span><span class="bullet"></span><span>Free on-site estimate</span></div>
-        <h1>Permanent Roofline Lighting — Installed Once, Enjoyed Year‑Round</h1>
-        <p class="lede">A clean, low-profile lighting system installed on your home or business. Set schedules, change colors, and run scenes anytime for holidays, events, and everyday curb appeal.</p>
+        <div class="microbar"><span>West Kootenays</span><span class="bullet"></span><span>Fully insured</span><span class="bullet"></span><span>Free on-site estimate</span></div>
+        <h1>Stop Hanging Lights. Install Them Once.</h1>
+        <p class="lede">Permanent roofline lighting that looks clean in the day and transforms your home at night.<br/>App-controlled. Year-round. Built for real winters.</p>
         <div class="cta-row">
           <a class="btn primary" href="#quote">Get a Free Quote</a>
           <a class="btn secondary" href="tel:+12501234567">Call / Text for a Fast Estimate</a>
         </div>
         <div class="trust-row">
-          <div class="pill">Fully insured installation</div>
           <div class="pill">Manufacturer parts + SUMMIT workmanship warranty</div>
           <div class="pill">Designed for harsh weather</div>
           <div class="pill">Reply within 1 business day</div>
         </div>
-        <div class="disclosure">Powered by <strong>Chromaglow Pro</strong> (48V RGBW) — installed by SUMMIT. Chromaglow Pro is manufactured by Big Star Lights. SUMMIT Lighting Systems is an independent installer.</div>
+        <div class="disclosure">
+          Powered by <strong>Chromaglow Pro</strong> (48V RGBW)<br/>
+          <em>Chromaglow Pro is manufactured by Big Star Lights. SUMMIT Lighting Systems is an independent installer.</em>
+        </div>
       </div>
     </header>
 
     <main>
-      <section id="problem">
+      <section id="switch">
         <div class="shell panel">
-          <div class="eyebrow">Problem / Relief</div>
-          <h2>Stop Climbing Ladders Every Fall</h2>
+          <div class="eyebrow">Why People Switch</div>
+          <h2>No More Ladders. No More Seasonal Hassle.</h2>
           <div class="grid-2" style="margin-top:12px;">
             <div>
               <ul style="margin:0; padding-left:18px; color: var(--text); line-height:1.6;">
-                <li>No more seasonal install/removal</li>
-                <li>No more tangled strands or dead sections</li>
-                <li>No more risky ladder work on icy days</li>
-                <li>No more last-minute scrambling before holidays</li>
+                <li>No yearly install and takedown</li>
+                <li>No tangled strands or dead sections</li>
+                <li>No risky ladder work in snow or ice</li>
+                <li>No last-minute scrambling before holidays</li>
               </ul>
             </div>
             <div class="card">
-              <h3>Outcome</h3>
-              <p>A permanent system that looks clean in daylight and transforms your home at night — with simple app control.</p>
+              <h3>Instead</h3>
+              <p>A permanent system that’s always ready: warm white for everyday curb appeal, full colour for holidays and events.</p>
               <a class="btn primary" href="#quote">Get a Free Quote</a>
             </div>
           </div>
@@ -204,143 +201,46 @@
       <section id="benefits">
         <div class="shell">
           <div class="eyebrow">What You Get</div>
-          <h2>A Permanent Lighting Upgrade That Pays Off Every Season</h2>
+          <h2>A Permanent Upgrade — Not Seasonal Decor</h2>
           <div class="grid-3" style="margin-top:16px;">
-            <div class="card"><h3>Always ready</h3><p>One install, year‑round use.</p></div>
-            <div class="card"><h3>Clean look</h3><p>Low-profile, color-matched tracks.</p></div>
-            <div class="card"><h3>Total control</h3><p>Schedules, scenes, and brightness.</p></div>
-            <div class="card"><h3>Holiday + everyday</h3><p>Warm whites to full color.</p></div>
-            <div class="card"><h3>Weather‑ready</h3><p>Built for real winters and summers.</p></div>
-            <div class="card"><h3>Long‑term value</h3><p>Durable components + clear warranties.</p></div>
+            <div class="card"><h3>Always ready</h3><p>One install, year-round use.</p></div>
+            <div class="card"><h3>Clean roofline look</h3><p>Low-profile, color-matched tracks.</p></div>
+            <div class="card"><h3>Full control</h3><p>Schedules, scenes, and brightness.</p></div>
+            <div class="card"><h3>True whites + full colour</h3><p>RGBW system with a dedicated white channel.</p></div>
+            <div class="card"><h3>Built for the Kootenays</h3><p>Weather-rated components for harsh climates.</p></div>
+            <div class="card"><h3>Long-term value</h3><p>Durable system + clear warranties.</p></div>
           </div>
-        </div>
-      </section>
-
-      <section id="system">
-        <div class="shell panel">
-          <div class="eyebrow">The System</div>
-          <h2>The System We Install: Chromaglow Pro (48V RGBW)</h2>
-          <p>Commercial‑grade permanent lighting designed for long runs, harsh weather, and precise roofline installs.</p>
-          <div class="grid-2" style="margin-top:12px;">
-            <div>
-              <ul style="margin:0; padding-left:18px; color: var(--text); line-height:1.6;">
-                <li>48V low‑voltage RGBW lighting system</li>
-                <li>IP‑rated components for outdoor use</li>
-                <li>Wide operating temperature range</li>
-                <li>Even spacing for clean roofline patterns</li>
-              </ul>
-            </div>
-            <div>
-              <ul style="margin:0; padding-left:18px; color: var(--text); line-height:1.6;">
-                <li>App control, scenes, and scheduling</li>
-                <li>Long‑run capability for larger homes</li>
-                <li>We design the layout and install for your rooflines</li>
-                <li>Chromaglow Pro is the component system we build with</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="gallery">
-        <div class="shell">
-          <div class="eyebrow">Gallery</div>
-          <h2>Recent Installs + Lighting Looks</h2>
-          <div class="gallery" style="margin-top:14px;">
-            <figure>
-              <img src="./Assets/66f4f3f0f5a20e001d2aac71.jpg" alt="Warm white roofline lighting" loading="lazy" />
-              <figcaption>Warm white accent</figcaption>
-            </figure>
-            <figure>
-              <img src="./Assets/oneHouseThreeWays.webp" alt="Color scenes on roofline" loading="lazy" />
-              <figcaption>Holiday + color scenes</figcaption>
-            </figure>
-            <figure class="placeholder"></figure>
-            <figure class="placeholder"></figure>
-          </div>
-          <div class="cta-row" style="margin-top:16px;">
-            <a class="btn primary" href="#quote">Get a Free Quote</a>
-          </div>
+          <p style="margin-top:14px;"><strong>System Installed:</strong> <span style="color: var(--muted);">Chromaglow Pro (48V RGBW) — commercial-grade, long-run capable, app-controlled lighting designed for permanent installs.</span></p>
         </div>
       </section>
 
       <section id="process">
         <div class="shell panel">
-          <div class="eyebrow">How It Works</div>
-          <h2>Simple Process, Clean Results</h2>
+          <div class="eyebrow">Simple Process</div>
+          <h2>Simple Process</h2>
           <div class="process" style="margin-top:14px;">
-            <div class="process-step"><strong>1) Request a quote</strong><span>2 minutes</span></div>
-            <div class="process-step"><strong>2) On‑site measure + design</strong><span>Rooflines, power, visibility</span></div>
-            <div class="process-step"><strong>3) Install day</strong><span>Professional mounting, tidy routing, testing</span></div>
-            <div class="process-step"><strong>4) App setup + handoff</strong><span>Scenes, schedules, controls</span></div>
+            <div class="process-step"><strong>1) Request a quote</strong><span>Quick form or call</span></div>
+            <div class="process-step"><strong>2) On-site measure + design</strong><span>Rooflines, power access, visibility</span></div>
+            <div class="process-step"><strong>3) Professional install</strong><span>Clean mounting, tidy routing, full test</span></div>
+            <div class="process-step"><strong>4) App setup + handoff</strong><span>Scenes, schedules, controls ready</span></div>
           </div>
-          <p style="margin-top:12px;">Typical installs are completed in 1 day for many homes (larger homes may require more time).</p>
-        </div>
-      </section>
-
-      <section id="proof">
-        <div class="shell">
-          <div class="eyebrow">Proof & Assurance</div>
-          <h2>Designed Like a Permanent Upgrade — Not Seasonal Decor</h2>
-          <div class="grid-3" style="margin-top:14px;">
-            <div class="card"><h3>Local + insured</h3><p>Serving the West Kootenays with insured, trained installers.</p></div>
-            <div class="card"><h3>Clear warranties</h3><p>Manufacturer components + SUMMIT workmanship clarity.</p></div>
-            <div class="card"><h3>Clean layout</h3><p>Professional roofline planning and cable management.</p></div>
+          <p style="margin-top:12px;">Most homes are completed in a day. Larger rooflines confirmed after measuring.</p>
+          <div class="cta-row" style="margin-top:12px;">
+            <a class="btn primary" href="#quote">Get a Free Quote</a>
           </div>
-        </div>
-      </section>
-
-      <section id="pricing">
-        <div class="shell panel">
-          <div class="eyebrow">Pricing</div>
-          <h2>What It Typically Costs</h2>
-          <p>Every quote is based on roofline length, complexity, and access. Most projects fall within a predictable range once we measure.</p>
-          <div class="grid-3" style="margin-top:12px;">
-            <div class="card"><h3>Small homes</h3><p>$X–$Y</p></div>
-            <div class="card"><h3>Typical homes</h3><p>$X–$Y</p></div>
-            <div class="card"><h3>Large / complex roofs</h3><p>$X–$Y</p></div>
-          </div>
-          <div class="grid-2" style="margin-top:12px;">
-            <div>
-              <h4>Cost drivers</h4>
-              <ul style="margin:0; padding-left:18px; color: var(--text); line-height:1.6;">
-                <li>Total linear feet of roofline covered</li>
-                <li>Roof complexity (peaks, returns, dormers)</li>
-                <li>Access (ladder vs. lift)</li>
-                <li>Power routing and concealment</li>
-              </ul>
-            </div>
-            <div class="card"><h3>Ready for pricing?</h3><p>We measure, design, and give you a clear written quote.</p><a class="btn primary" href="#quote">Get a Free Quote</a></div>
-          </div>
-        </div>
-      </section>
-
-      <section id="warranty">
-        <div class="shell">
-          <div class="eyebrow">Warranties + Safety</div>
-          <h2>Warranties You Can Understand</h2>
-          <div class="grid-2" style="margin-top:14px;">
-            <div class="card"><h3>Manufacturer (Chromaglow Pro / Big Star Lights)</h3><p>Parts coverage per manufacturer warranty terms.</p></div>
-            <div class="card"><h3>SUMMIT Lighting Systems</h3><p>Workmanship / installation warranty. Support for configuration + basic troubleshooting.</p></div>
-          </div>
-          <p style="margin-top:10px;">We install with safety‑first practices and appropriate access equipment.</p>
         </div>
       </section>
 
       <section id="faq">
         <div class="shell panel">
           <div class="eyebrow">FAQ</div>
-          <h2>Answers Up Front</h2>
+          <h2>FAQ (Short + Direct)</h2>
           <div class="faq" style="margin-top:12px;">
-            <details open><summary>Does it look noticeable during the day?</summary><p>Chromaglow Pro is designed to be discreet on the roofline with clean, built-in tracks. We color-match and place it to minimize visibility from the street where possible.</p></details>
-            <details><summary>Can you do warm white only?</summary><p>Yes. Chromaglow Pro is RGBW, including a dedicated white channel. We can set warm-white-only daily schedules, with full color available anytime.</p></details>
-            <details><summary>How do controls and scheduling work?</summary><p>Control through the Chromaglow Pro app: presets, scenes, brightness, and scheduled automation. Compatible with Alexa and Google Home.</p></details>
-            <details><summary>How long does installation take?</summary><p>Many homes are completed in a day; larger or complex roofs can take longer. We confirm timelines after measuring.</p></details>
-            <details><summary>What happens if a section fails?</summary><p>Sections can be cut and spliced for straightforward repairs. We diagnose, isolate the segment, and repair/replace using manufacturer components.</p></details>
-            <details><summary>Is it safe / low voltage?</summary><p>Yes. It’s a 48V low-voltage system; local permit requirements vary by municipality.</p></details>
-            <details><summary>Can I expand coverage later?</summary><p>Usually, yes. The system is designed to scale, and we can expand later with additional power supplies/controllers as needed.</p></details>
-            <details><summary>How do you handle steep roofs and hard access?</summary><p>We plan around safe access. Our crew is certified in fall protection and MEWP operation, and we choose the right approach for the site.</p></details>
-            <details><summary>What’s included in the quote?</summary><p>Measured lighting plan, full cost estimate, timeline estimate, and warranty clarity for manufacturer parts + SUMMIT workmanship.</p></details>
+            <details open><summary>Does it look noticeable during the day?</summary><p>No. The track is designed to be discreet and color-matched where possible.</p></details>
+            <details><summary>Can I run warm white only?</summary><p>Yes. RGBW includes a dedicated white channel.</p></details>
+            <details><summary>Is it safe?</summary><p>It’s a 48V low-voltage system. Requirements vary by municipality.</p></details>
+            <details><summary>Can it handle winter?</summary><p>Yes. Components are built for outdoor use in harsh climates.</p></details>
+            <details><summary>What’s included in the quote?</summary><p>Measured layout, total cost, timeline estimate, and warranty clarity.</p></details>
           </div>
         </div>
       </section>
@@ -351,7 +251,7 @@
             <div>
               <div class="eyebrow">Get a Free Quote</div>
               <h2>Reply within 1 business day. No pressure.</h2>
-              <p>Tell us where you are and what you want to light. We’ll respond with a clear plan and written estimate.</p>
+              <p>Quick form or call/text for a fast estimate.</p>
               <div class="card" style="margin-top:12px;">
                 <p><strong>Call / Text:</strong> <a href="tel:+12501234567">(250) 123-4567</a></p>
                 <p><strong>Email:</strong> <a href="mailto:hello@summitlighting.ca">hello@summitlighting.ca</a></p>
@@ -371,7 +271,7 @@
                 <input id="contact" name="contact" placeholder="(250) 555-1234 or you@example.com" required />
               </div>
               <div>
-                <label for="notes">Anything we should know? (optional)</label>
+                <label for="notes">Project Details (optional)</label>
                 <textarea id="notes" name="notes" placeholder="Roofline length, timeline, special requests..."></textarea>
               </div>
               <p style="color: var(--muted);">Reply within 1 business day. No pressure.</p>
@@ -384,24 +284,11 @@
     </main>
 
     <footer>
-      <div class="shell footer-grid">
-        <div class="footer-brand">
-          <img src="./Assets/SUMMIT Logo - Light.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
-          <div>
-            <strong>SUMMIT Lighting Systems</strong><br/>
-            <small>Permanent Holiday + Year‑Round Accent Lighting</small>
-          </div>
-        </div>
-        <div>
-          <h4>Service Area</h4>
-          <p>West Kootenays (Nelson • Trail • Castlegar • Rossland • Salmo + nearby)</p>
-        </div>
-        <div>
-          <h4>Contact</h4>
-          <p>Phone/Text: <a href="tel:+12501234567">(250) 123-4567</a><br/>
-             Email: <a href="mailto:hello@summitlighting.ca">hello@summitlighting.ca</a></p>
-          <p class="disclosure">Chromaglow Pro is manufactured by Big Star Lights. SUMMIT Lighting Systems is an independent installer.</p>
-        </div>
+      <div class="shell">
+        <strong>SUMMIT Lighting Systems</strong><br/>
+        <small>Permanent Roofline + Year‑Round Accent Lighting</small><br/>
+        <small>Serving Nelson • Trail • Castlegar • Rossland • Salmo</small><br/>
+        <p class="disclosure" style="margin-top:10px;">Chromaglow Pro is manufactured by Big Star Lights. SUMMIT Lighting Systems is an independent installer.</p>
       </div>
     </footer>
 
