Use logo2 in header

--- a/src/index.html
+++ b/src/index.html
@@ -39,10 +39,10 @@
     .page { overflow-x: hidden; }
     .shell { width: min(var(--max), calc(100% - 48px)); margin: 0 auto; }
 
-    .nav { position: sticky; top: 0; z-index: 12; background: rgba(12,17,27,0.86); backdrop-filter: blur(18px); border-bottom: 1px solid rgba(255,255,255,0.05); }
-    .nav-inner { display: flex; align-items: center; justify-content: space-between; padding: 22px 0; gap: 20px; transition: padding 180ms ease; }
+    .nav { position: sticky; top: 0; z-index: 12; background: rgba(12,17,27,0.86); backdrop-filter: blur(18px); border-bottom: 1px solid rgba(255,255,255,0.05); overflow: visible; }
+    .nav-inner { display: flex; align-items: center; justify-content: space-between; padding: 12px 0; gap: 20px; transition: padding 180ms ease; }
     .brand { display: flex; align-items: center; gap: 18px; }
-    .brand img { height: 150px; width: auto; mix-blend-mode: screen; filter: drop-shadow(0 22px 44px rgba(0,0,0,0.42)); opacity: 0.98; transition: height 180ms ease, opacity 180ms ease; }
+    .brand img { display: block; height: clamp(180px, 16vw, 320px); width: auto; margin: -48px 0; mix-blend-mode: screen; filter: drop-shadow(0 22px 44px rgba(0,0,0,0.42)); opacity: 0.98; transition: height 180ms ease, opacity 180ms ease; }
     .nav-menu { position: relative; }
     .menu-toggle { display: inline-flex; align-items: center; gap: 8px; padding: 10px 14px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.12); background: rgba(255,255,255,0.05); color: var(--text); font-weight: 700; cursor: pointer; transition: background 140ms ease, border-color 140ms ease; }
     .menu-toggle:hover { background: rgba(255,255,255,0.09); border-color: rgba(255,255,255,0.2); }
@@ -121,6 +121,7 @@
     }
     @media (max-width: 820px) {
       .nav-inner { padding: 14px 0; }
+      .brand img { height: 140px; margin: -18px 0; }
       .hero { padding-top: 70px; }
       .sticky-cta { display: flex; }
       body { padding-bottom: 82px; }
@@ -132,7 +133,7 @@
     <nav class="nav" id="nav">
       <div class="shell nav-inner">
         <div class="brand">
-          <img src="./Assets/SUMMIT Logo - Light.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
+          <img src="./Assets/logo2.png" alt="SUMMIT Lighting Systems logo" loading="lazy" />
         </div>
         <div class="nav-menu" aria-label="Primary">
           <button class="menu-toggle" type="button" aria-expanded="false" aria-controls="menu-list">
